fixed site header spacing

--- a/_src/_includes/sass/abstracts/_tokens.scss
+++ b/_src/_includes/sass/abstracts/_tokens.scss
@@ -11,7 +11,7 @@ $active-theme: $light;
 //
 // -----------------------------------------------------------------------------
 
-
+$site-header-padding-block: var(--space-3xs);
 
 // -----------------------------------------------------------------------------
 // Hamburger
