--- a/_src/_includes/sass/blocks/_site-header.scss
+++ b/_src/_includes/sass/blocks/_site-header.scss
@@ -1,7 +1,9 @@
+@use "../abstracts" as *;
+
 .site-header {
     background: var(--site-header-background);
     padding-inline: var(--site-header-padding-inline);
-    padding-block: var(--site-header-padding-block);
+    padding-block: var(--site-header-padding-block, #{$site-header-padding-block});
 
     &__inner {
         display: flex;
